// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Cascader Select 1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select"
    onClick={[Function]}
  >
    <div
      className="za-select-input za-select-placeholder"
    >
      请选择
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <Popup
          onMaskClick={[Function]}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <PickerView
                    cols={Infinity}
                    dataSource={
                      Array [
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "11",
                            },
                            Object {
                              "label": "选项二",
                              "value": "12",
                            },
                          ],
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "21",
                            },
                            Object {
                              "label": "选项二",
                              "value": "22",
                            },
                          ],
                          "label": "选项一",
                          "value": "2",
                        },
                      ]
                    }
                    disabled={false}
                    itemRender={[Function]}
                    onCancel={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onOk={[Function]}
                    onTransition={[Function]}
                    prefixCls="za-picker"
                    value={
                      Array [
                        "1",
                        "11",
                      ]
                    }
                    valueMember="value"
                    visible={false}
                  >
                    <div
                      className="za-picker-panel"
                    >
                      <div
                        className="za-picker-view"
                      >
                        <Wheel
                          dataSource={
                            Array [
                              Object {
                                "label": "选项一",
                                "value": "1",
                              },
                              Object {
                                "label": "选项一",
                                "value": "2",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          key="0"
                          onChange={[Function]}
                          onTransition={[Function]}
                          prefixCls="za-wheel"
                          value="1"
                          valueMember="value"
                        >
                          <div
                            className="za-wheel"
                          >
                            <div
                              className="za-wheel-content"
                            >
                              <div
                                className="za-wheel-item za-wheel-item-selected"
                                key="0"
                              >
                                选项一
                              </div>
                              <div
                                className="za-wheel-item"
                                key="1"
                              >
                                选项一
                              </div>
                            </div>
                          </div>
                        </Wheel>
                        <Wheel
                          dataSource={
                            Array [
                              Object {
                                "label": "选项一",
                                "value": "11",
                              },
                              Object {
                                "label": "选项二",
                                "value": "12",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          key="1"
                          onChange={[Function]}
                          onTransition={[Function]}
                          prefixCls="za-wheel"
                          value="11"
                          valueMember="value"
                        >
                          <div
                            className="za-wheel"
                          >
                            <div
                              className="za-wheel-content"
                            >
                              <div
                                className="za-wheel-item za-wheel-item-selected"
                                key="0"
                              >
                                选项一
                              </div>
                              <div
                                className="za-wheel-item"
                                key="1"
                              >
                                选项二
                              </div>
                            </div>
                          </div>
                        </Wheel>
                      </div>
                      <div
                        className="za-picker-mask-top"
                      />
                      <div
                        className="za-picker-mask-bottom"
                      />
                    </div>
                  </PickerView>
                </div>
              </div>
              <Mask
                className=""
                onClick={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Portal>
        </Popup>
      </div>
    </Picker>
  </div>
</Select>
`;

exports[`Select Cascader Select init value 1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  displayAddon="-"
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  value={
    Array [
      "1",
      "12",
    ]
  }
  valueMember="value"
>
  <div
    className="za-select"
    onClick={[Function]}
  >
    <div
      className="za-select-input"
    >
      选项一
      选项二
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      displayAddon="-"
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      value={
        Array [
          "1",
          "12",
        ]
      }
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <Popup
          onMaskClick={[Function]}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <PickerView
                    cols={Infinity}
                    dataSource={
                      Array [
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "11",
                            },
                            Object {
                              "label": "选项二",
                              "value": "12",
                            },
                          ],
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "21",
                            },
                            Object {
                              "label": "选项二",
                              "value": "22",
                            },
                          ],
                          "label": "选项一",
                          "value": "2",
                        },
                      ]
                    }
                    disabled={false}
                    displayAddon="-"
                    itemRender={[Function]}
                    onCancel={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onOk={[Function]}
                    onTransition={[Function]}
                    prefixCls="za-picker"
                    value={
                      Array [
                        "1",
                        "12",
                      ]
                    }
                    valueMember="value"
                    visible={false}
                  >
                    <div
                      className="za-picker-panel"
                    >
                      <div
                        className="za-picker-view"
                      >
                        <Wheel
                          dataSource={
                            Array [
                              Object {
                                "label": "选项一",
                                "value": "1",
                              },
                              Object {
                                "label": "选项一",
                                "value": "2",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          key="0"
                          onChange={[Function]}
                          onTransition={[Function]}
                          prefixCls="za-wheel"
                          value="1"
                          valueMember="value"
                        >
                          <div
                            className="za-wheel"
                          >
                            <div
                              className="za-wheel-content"
                            >
                              <div
                                className="za-wheel-item za-wheel-item-selected"
                                key="0"
                              >
                                选项一
                              </div>
                              <div
                                className="za-wheel-item"
                                key="1"
                              >
                                选项一
                              </div>
                            </div>
                          </div>
                        </Wheel>
                        <Wheel
                          dataSource={
                            Array [
                              Object {
                                "label": "选项一",
                                "value": "11",
                              },
                              Object {
                                "label": "选项二",
                                "value": "12",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          key="1"
                          onChange={[Function]}
                          onTransition={[Function]}
                          prefixCls="za-wheel"
                          value="12"
                          valueMember="value"
                        >
                          <div
                            className="za-wheel"
                          >
                            <div
                              className="za-wheel-content"
                            >
                              <div
                                className="za-wheel-item"
                                key="0"
                              >
                                选项一
                              </div>
                              <div
                                className="za-wheel-item za-wheel-item-selected"
                                key="1"
                              >
                                选项二
                              </div>
                            </div>
                          </div>
                        </Wheel>
                      </div>
                      <div
                        className="za-picker-mask-top"
                      />
                      <div
                        className="za-picker-mask-bottom"
                      />
                    </div>
                  </PickerView>
                </div>
              </div>
              <Mask
                className=""
                onClick={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Portal>
        </Popup>
      </div>
    </Picker>
  </div>
</Select>
`;

exports[`Select Select 1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select"
    onClick={[Function]}
  >
    <div
      className="za-select-input za-select-placeholder"
    >
      请选择
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <Popup
          onMaskClick={[Function]}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <PickerView
                    cols={Infinity}
                    dataSource={
                      Array [
                        Object {
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "label": "选项二",
                          "value": "2",
                        },
                      ]
                    }
                    disabled={false}
                    itemRender={[Function]}
                    onCancel={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onOk={[Function]}
                    onTransition={[Function]}
                    prefixCls="za-picker"
                    value={
                      Array [
                        "1",
                      ]
                    }
                    valueMember="value"
                    visible={false}
                  >
                    <div
                      className="za-picker-panel"
                    >
                      <div
                        className="za-picker-view"
                      >
                        <Wheel
                          dataSource={
                            Array [
                              Object {
                                "label": "选项一",
                                "value": "1",
                              },
                              Object {
                                "label": "选项二",
                                "value": "2",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          key="0"
                          onChange={[Function]}
                          onTransition={[Function]}
                          prefixCls="za-wheel"
                          value="1"
                          valueMember="value"
                        >
                          <div
                            className="za-wheel"
                          >
                            <div
                              className="za-wheel-content"
                            >
                              <div
                                className="za-wheel-item za-wheel-item-selected"
                                key="0"
                              >
                                选项一
                              </div>
                              <div
                                className="za-wheel-item"
                                key="1"
                              >
                                选项二
                              </div>
                            </div>
                          </div>
                        </Wheel>
                      </div>
                      <div
                        className="za-picker-mask-top"
                      />
                      <div
                        className="za-picker-mask-bottom"
                      />
                    </div>
                  </PickerView>
                </div>
              </div>
              <Mask
                className=""
                onClick={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Portal>
        </Popup>
      </div>
    </Picker>
  </div>
</Select>
`;

exports[`Select render defaultValue correctly  1`] = `
<Select
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="2"
  displayRender={[Function]}
  itemRender={[Function]}
  onClick={[Function]}
  placeholder="请选择"
  prefixCls="za-select"
  valueMember="value"
>
  <div
    className="za-select"
    onClick={[Function]}
  >
    <div
      className="za-select-input za-select-placeholder"
    >
      请选择
    </div>
    <Picker
      cancelText="取消"
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      defaultValue="2"
      itemRender={[Function]}
      okText="确定"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onOk={[Function]}
      onTransition={[Function]}
      prefixCls="za-picker"
      title="请选择"
      valueMember="value"
      visible={false}
    >
      <div
        className="za-picker"
      >
        <Popup
          onMaskClick={[Function]}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={true}
            maskType="normal"
            onMaskClick={[Function]}
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <div
                  className="za-picker-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-header"
                  >
                    <div
                      className="za-picker-cancel"
                      onClick={[Function]}
                    >
                      取消
                    </div>
                    <div
                      className="za-picker-title"
                    >
                      请选择
                    </div>
                    <div
                      className="za-picker-submit"
                      onClick={[Function]}
                    >
                      确定
                    </div>
                  </div>
                  <PickerView
                    cols={Infinity}
                    dataSource={
                      Array [
                        Object {
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "label": "选项二",
                          "value": "2",
                        },
                      ]
                    }
                    defaultValue="2"
                    disabled={false}
                    itemRender={[Function]}
                    onCancel={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onOk={[Function]}
                    onTransition={[Function]}
                    prefixCls="za-picker"
                    value={
                      Array [
                        "2",
                      ]
                    }
                    valueMember="value"
                    visible={false}
                  >
                    <div
                      className="za-picker-panel"
                    >
                      <div
                        className="za-picker-view"
                      >
                        <Wheel
                          dataSource={
                            Array [
                              Object {
                                "label": "选项一",
                                "value": "1",
                              },
                              Object {
                                "label": "选项二",
                                "value": "2",
                              },
                            ]
                          }
                          disabled={false}
                          itemRender={[Function]}
                          key="0"
                          onChange={[Function]}
                          onTransition={[Function]}
                          prefixCls="za-wheel"
                          value="2"
                          valueMember="value"
                        >
                          <div
                            className="za-wheel"
                          >
                            <div
                              className="za-wheel-content"
                            >
                              <div
                                className="za-wheel-item"
                                key="0"
                              >
                                选项一
                              </div>
                              <div
                                className="za-wheel-item za-wheel-item-selected"
                                key="1"
                              >
                                选项二
                              </div>
                            </div>
                          </div>
                        </Wheel>
                      </div>
                      <div
                        className="za-picker-mask-top"
                      />
                      <div
                        className="za-picker-mask-bottom"
                      />
                    </div>
                  </PickerView>
                </div>
              </div>
              <Mask
                className=""
                onClick={[Function]}
                prefixCls="za-mask"
                style={
                  Object {
                    "WebkitAnimationDuration": "200ms",
                    "animationDuration": "200ms",
                  }
                }
                type="normal"
                visible={false}
              />
            </div>
          </Portal>
        </Popup>
      </div>
    </Picker>
  </div>
</Select>
`;
